[Harish] : Update swagger docs for all the routes and refactor get post fields
