# models/request/post.go
@@ -8,3 +8,7 @@ type CommentPost struct {
 	PostUID string `json:"post_uid" binding:"required,validPostUID"`
 	Comment string `json:"comment" binding:"required"`
 }
+
+type PublishRequest struct {
+	DratID string `json:"draft_id" binding:"required"`
+}
